test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/stdout.snap
---
source: test/tests/tests.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics --release --ir final
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics
   Compiling library std (sway-lib-std)
// IR: Final
library {
}

   Compiling script const_generics (test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics)
warning
 --> <autogenerated>:3:38
  |
1 | #[allow(dead_code)] impl Debug for C {
2 |                 #[allow(dead_code)]
3 |                 fn fmt(self, ref mut f: Formatter) { }
  |                                      - This declaration is never used.
4 |             }
  |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_pass/language/const_generics/src/main.sw:9:15
   |
 7 | }
 8 | 
 9 | impl<T, const N: u64> A for [T; N] {
   |               ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
10 |     fn my_len(self) -> u64 {
11 |         N
   |
____

  Aborting due to 1 error.
error: Failed to compile const_generics
